@@ -9,6 +9,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
     /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
     devices no longer exist.
   * Document noshell boot parameter. See #504381.
+  * Clarify behaviour of "auto" preseed alias.
 
   [ Frans Pop ]
   * Document preseeding of network-console now that its postinst can be
